--- a/spec/dummy/app/views/dummy/content_for.html.erb
+++ b/spec/dummy/app/views/dummy/content_for.html.erb
@@ -1,3 +1,9 @@
+<%=  content_for :top_content do %>
+  <p>
+    This is top_content override.
+  </p>
+<% end %>
+
 <%=  content_for :main_content do %>
   <p>
     This is main_content override.
